--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,12 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.vazkii.instancesync.InstanceSync'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
